# RODY

./: .gitattributes  .gitignore  README.md
AGV/agv/: agv_control_gui.py  aruco.py  linetrace_end.py  linetrace_start.py
AGV/myagv_ros/: map.pgm
AGV/myagv_ros/src/assistant/: CMakeLists.txt
AGV/myagv_ros/src/assistant/data/: 1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
AGV/myagv_ros/src/assistant/include/assistant/: goal_sending.h  websocket_client.h
AGV/myagv_ros/src/assistant/launch/: goal_sending.launch
AGV/myagv_ros/src/assistant/src/: goal_sending.cpp  record_location.py
Camera/: send_images.py
Esp32_Double_one_connection_two_button/esp32_one/: esp32_one.ino
Esp32_Double_one_connection_two_button/esp32_two/: esp32_two.ino
Flask_Webserver/: http_flask.py
Flask_Webserver/templates/: page_admin.html  page_admin_login.html  page_item_storage.html  page_main.html  page_navigation.html
Modeling/: Basket_Leg.step
Modeling/Bag/: Bag.step  Handle.step  Handle_Tip.step
Modeling/Body/: Back_Rib.step  Block.step  Front_Rib.step  HInge_v2.step  Lever_Arm_L.step  Lever_Arm_R.step  Mid_Rib.step  Mid_Sup.step  Servo_Holder.step
Modeling/Bracket/: Bracket.step  Nut.step
Modeling/Camera_Module/: Back_Plate.step  Bolt.step  Connector.step  Neck.step  Nut.step  camera_module.step
Modeling/Fork/: Hex.step  fork.step  fork2.step  fork_pin1.step  fork_pin2.step
Modeling/Handle/: Button.step  Case.step  Cover.step  Hook.step  Nut.step  (+1 more)
Motor/: motor_control.py
ROBOTARM_PLC/: 웹소켓_plc_arm_최종.py  터미널_test_version(통신x).py
(+63 files in other folders)
